--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="shortcut icon" href="favicon.ico">
 
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic%7COpen+Sans:700,400">
-    <link rel="stylesheet" type="text/css" href="http://localhost:2368/assets/css/screen.css?v=77c7023e3c">
+    <link rel="stylesheet" type="text/css" href="https://padiazg.github.io/assets/css/screen.css?v=77c7023e3c">
 
 
     <link rel="canonical" href="index.html">
@@ -22,11 +22,11 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="patotech">
     <meta property="og:description" content="Thoughts, stories and ideas.">
-    <meta property="og:url" content="http://localhost:2368/">
+    <meta property="og:url" content="https://padiazg.github.io/">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="patotech">
     <meta name="twitter:description" content="Thoughts, stories and ideas.">
-    <meta name="twitter:url" content="http://localhost:2368/">
+    <meta name="twitter:url" content="https://padiazg.github.io/">
     
     <script type="application/ld+json">
 {
@@ -35,12 +35,12 @@
     "publisher": {
         "@type": "Organization",
         "name": "patotech",
-        "logo": "http://localhost:2368/ghost/img/ghosticon.jpg"
+        "logo": "https://padiazg.github.io/ghost/img/ghosticon.jpg"
     },
-    "url": "http://localhost:2368/",
+    "url": "https://padiazg.github.io/",
     "mainEntityOfPage": {
         "@type": "WebPage",
-        "@id": "http://localhost:2368"
+        "@id": "https://padiazg.github.io"
     },
     "description": "Thoughts, stories and ideas."
 }
@@ -122,7 +122,7 @@
 
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.12.0.min.js"></script>
     
-    <script type="text/javascript" src="http://localhost:2368/assets/js/jquery.fitvids.js?v=77c7023e3c"></script>
-    <script type="text/javascript" src="http://localhost:2368/assets/js/index.js?v=77c7023e3c"></script>
+    <script type="text/javascript" src="https://padiazg.github.io/assets/js/jquery.fitvids.js?v=77c7023e3c"></script>
+    <script type="text/javascript" src="https://padiazg.github.io/assets/js/index.js?v=77c7023e3c"></script>
 
 </body>
